добавлены стили, обновлена структура проекта

--- a/src/components/Layout/Footer/footer.module.css
+++ b/src/components/Layout/Footer/footer.module.css
@@ -48,6 +48,19 @@
     justify-content: space-between;
   }
 
+  .footer__logo {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 10px;
+  }
+
   a {
     text-decoration: none;
+    color: black;
+    opacity: 0.8;
+  }
+
+  .footer__social__logos {
+    height: 25px;
+    width: 25px;
   }
