--- a/src/components/Carditem/carditem.module.css
+++ b/src/components/Carditem/carditem.module.css
@@ -6,3 +6,10 @@
     height: 200px;
     width: 200px;
 }
+
+.tocart__button {
+    background-color: rgb(248, 222, 72);
+    border-radius: 25px;
+    border-color: none;
+    
+}
