--- a/src/components/Layout/Header/header.module.css
+++ b/src/components/Layout/Header/header.module.css
@@ -40,3 +40,13 @@
   border-radius: 5rem;
   outline: none;
 }
+
+.header__logo {
+  height: 50px;
+  width: 50px;
+}
+
+.header__menu__item {
+  height: 30px;
+  width: 30px;
+}
