--- a/src/components/Layout/Footer/footer.module.css
+++ b/src/components/Layout/Footer/footer.module.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100px;
     box-sizing: unset;
+    margin-top: 15px;
 
     padding: 90px 20px;
     font-size: 16px;
